Closed
Bug 278047
Opened 21 years ago
Closed 21 years ago
mozilla does not switch profile completely to a different locale selection
Categories
(SeaMonkey :: Startup & Profiles, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: eagle.lu, Assigned: eagle.lu)
Details
Attachments
(3 files)
|
957 bytes,
patch
|
neil
:
review-
|
Details | Diff | Splinter Review |
|
660 bytes,
patch
|
benjamin
:
review-
|
Details | Diff | Splinter Review |
|
615 bytes,
patch
|
benjamin
:
review+
neil
:
superreview+
|
Details | Diff | Splinter Review |
Steps to reproduce
1.Invoke mozilla browser $mozilla -selectprofile
2.Create an english profile and any other language profile (ex: spanish)
3.Log into english profile and "switch profile" to previously created spanish
profile
Observation and bug : when mozilla is reinvoked only the dialog boxes are in
spanish and main tool bar and drop down menus remain english.
note : however quit browser, invoke mozilla again and create a spanish profile
with a different name and logon. The profile change of browser is complete
(toolbars and menus are in spanish). The user cannot switch to an english
profile unless one creates another english profile.
Comment on attachment 171242 [details] [diff] [review]
Force to flush xul cache when swithing profile
Thanks for your comment in the newsgroup. Now I made a patch. Would you please
reivew it? Thanks
Attachment #171242 -
Flags: review?(neil.parkwaycc.co.uk)
Comment 3•21 years ago
|
||
Comment on attachment 171242 [details] [diff] [review]
Force to flush xul cache when swithing profile
The XUL cache should already be flushed by the chrome-flush-caches
notification. The trouble is, nobody calls it. Oops :-(
Attachment #171242 -
Flags: review?(neil.parkwaycc.co.uk) → review-
Comment 4•21 years ago
|
||
Actually nsChromeRegistry::FlushAllCaches calls it, but only
nsChromeRegistry:ReloadChrome calls that.
bsmedberg, darin: who should be flushing the xul cache on profile switch?
Comment on attachment 171249 [details] [diff] [review]
forece chrome-flush-caches when switching profile
r?
Attachment #171249 -
Flags: review?(neil.parkwaycc.co.uk)
Comment 7•21 years ago
|
||
Comment on attachment 171249 [details] [diff] [review]
forece chrome-flush-caches when switching profile
This call should not be made by UI code. I believe that the best place for this
call would be at nsChromeRegistry::Observe (only the seamonkey version) for the
profile-before-change topic.
Attachment #171249 -
Flags: review?(neil.parkwaycc.co.uk) → review-
Updated•21 years ago
|
Summary: mozilla does not switch profile completely to a different region selection → mozilla does not switch profile completely to a different locale selection
I added a call FlushAllCaches() in nsChromeRegistry::Observe()
"profile-before-change" section, but it doesn't work. Actually, when I lauch
mozilla with a profile using Chinese, Menu labels are shown in English instead.
Sorry, I make a mistake in my worksapce. Now the patch works for me.
| Assignee | ||
Comment 10•21 years ago
|
||
Comment on attachment 171336 [details] [diff] [review]
Flush caches in nsChromeRegistry::Observe() "profile-before-change" section
r now?
Attachment #171336 -
Flags: review?(bsmedberg)
Updated•21 years ago
|
Attachment #171336 -
Flags: superreview?(neil.parkwaycc.co.uk)
Attachment #171336 -
Flags: review?(bsmedberg)
Attachment #171336 -
Flags: review+
Updated•21 years ago
|
Attachment #171336 -
Flags: superreview?(neil.parkwaycc.co.uk) → superreview+
Comment 11•21 years ago
|
||
Checking in nsChromeRegistry.cpp;
/cvsroot/mozilla/rdf/chrome/src/nsChromeRegistry.cpp,v <-- nsChromeRegistry.cpp
new revision: 1.313; previous revision: 1.312
done
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•