Bug 278047 mozilla does not switch profile completely to a different locale selection r=bsmedberg, sr=neil.parkwaycc.co.uk, patch=brian.lu@sun.com